k8s/dev/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: skymechanics
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
